/**
 * This block is used to configure the repositories and dependencies for Gradle.
 * https://docs.gradle.org/current/userguide/tutorial_using_tasks.html#sec:build_script_external_dependencies
 * https://stackoverflow.com/a/17774000
 */
buildscript {
	ext {
		// If you uncomment the next line of code, DO NOT commit or push it!
		//useMavenLocal=true

        // buildscript dependency versions
        piTestCommandLineVersion = '1.6.3'
        piTestGradlePluginVersion = '1.5.2'
	}

	repositories {
		// To use your local maven repo, set useMavenLocal=true in buildscript.ext section.
		if (project.hasProperty("useMavenLocal")) {
			// DO NOT put mavenLocal() in the general area as an always-available option.
			// It will sometimes fail your builds with bizarre errors.
			mavenLocal()
		}

		maven {
			credentials {
				username System.getenv('SA_U') //fetched from environment
				password System.getenv('SA_P') //fetched from environment
			}
			url 'https://artifactory.nike.com/artifactory/all-repos'
		}

		mavenCentral()
	}
	/**
	 * This block in buildscript is used to configure dependencies that the Gradle needs to build during the project.
	 * https://docs.gradle.org/current/userguide/tutorial_using_tasks.html#sec:build_script_external_dependencies
	 */
	dependencies {
        classpath("info.solidsoft.gradle.pitest:gradle-pitest-plugin:${piTestGradlePluginVersion}")
        classpath("org.pitest:pitest-command-line:${piTestCommandLineVersion}")
	}
}

plugins {
	id 'java'
	id 'groovy'
	id 'idea'
	id 'eclipse'
	id 'org.springframework.boot' version '2.7.3'
	id 'io.spring.dependency-management' version '1.0.13.RELEASE'
	
	// gradle/check.gradle ⇩⇩⇩
	id 'pmd'
	id 'jacoco'
	id 'checkstyle'
	// https://plugins.gradle.org/plugin/com.github.spotbugs
	id 'com.github.spotbugs' version '5.0.12'
	
	//id 'org.sonarqube' version '2.8'
	//id 'com.avast.gradle.docker-compose' version '0.7.1'
}

group = 'com.nike'
version = '0.0.1'
sourceCompatibility = '11'

repositories {
	// To use your local maven repo, add -PuseMavenLocal=true as a "Gradle project parameter"
	// Learn more about using -P @ https://docs.gradle.org/current/userguide/build_environment.html#sec:project_properties
	if (project.hasProperty("useMavenLocal")) {
		// DO NOT put mavenLocal() in the general area as an always-available option.
		// It will sometimes fail your builds with bizarre errors.
		mavenLocal()
	}

	maven {
		credentials {
			username System.getenv('SA_U') //fetched from environment
			password System.getenv('SA_P') //fetched from environment
		}
		url 'https://artifactory.nike.com/artifactory/all-repos'
	}

	mavenCentral()
}

ext {
	nikeSfxVersion = '4.6.1.90'
	wingtipsVersion = '0.23.1'
	wingtipsInternalVersion = '7.0.0.42'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	// https://mvnrepository.com/artifact/io.netty/netty-all
	implementation 'io.netty:netty-all:4.1.63.Final'
	// https://mvnrepository.com/artifact/org.codehaus.groovy/groovy
	implementation 'org.codehaus.groovy:groovy:3.0.10'
	implementation 'com.google.code.gson:gson:2.9.0'


    // Spring dependencies
    implementation("org.springframework.boot:spring-boot-starter-actuator") //https://howtodoinjava.com/spring-boot/actuator-endpoints-example/


	//TODO update dependencies here for fixing twistlock CVEs here @developer @devops
	// plz ref: https://github.com/nike-internal/product_catalog.service.assortment.v1/blob/73e601dfa7e129d25723e64d0a98fb58f13fb9b9/build.gradle
	// maybe ref: https://stackoverflow.com/a/30729087/3809225
	// Security fixes here:

    // Third-party dependencies
    //implementation("com.squareup.okhttp3:okhttp:3.9.0")
    //implementation("org.apache.httpcomponents:httpclient:4.5.9")

	// Nike dependencies
    implementation("com.nike.wingtips:wingtips-java8:${wingtipsVersion}")
    implementation("com.nike.wingtips:wingtips-spring-boot:${wingtipsVersion}") {
        exclude group: 'org.springframework', module: 'spring-web'
        exclude group: 'org.springframework.boot', module: 'spring-boot-autoconfigure'
    }
    implementation("com.nike.wingtips:wingtips-internal-spring-cloud-netflix:${wingtipsInternalVersion}")

    // Metrics
    implementation("com.nike.signalfx:sfx-spring-boot-2-metrics:${nikeSfxVersion}")
    implementation("com.nike.signalfx:sfx-aws-sdk-1-metrics:${nikeSfxVersion}")
    implementation("com.nike.signalfx:sfx-api-key-auto-resolution:${nikeSfxVersion}")

	// Trace
	// TODO enable zipkin for report trace to SFX
	//implementation("com.nike.wingtips:wingtips-zipkin2-spring-boot:${wingtipsVersion}")
	//implementation("com.nike.wingtips:wingtips-internal-zipkin2:${wingtipsInternalVersion}")
	//implementation("com.nike.signalfx:sfx-spring-boot-2-trace:${nikeSfxVersion}")
	//implementation("com.nike.signalfx:nike-signalfx-publisher:${nikeSfxVersion}")
	// FYI, Hystrix is not avaliable in spring cloud since 2020

   	// Test dependencies
    testImplementation("org.springframework.boot:spring-boot-starter-test")
}

apply from: file('gradle/check.gradle')
apply from: file('gradle/integrationTest.gradle')
apply from: file('gradle/otherTasks.gradle')

// for disable *-plain.jar
// https://docs.spring.io/spring-boot/docs/current/gradle-plugin/reference/htmlsingle/#packaging-executable.and-plain-archives
tasks.named("jar") {
	enabled = false
}
